# AutoAimer_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: aimer_msgs.pc  detector.pc  predictor.pc
devel/share/aimer_msgs/cmake/: aimer_msgsConfig.cmake
devel/share/detector/cmake/: detectorConfig.cmake
devel/share/predictor/cmake/: predictorConfig.cmake
src/UltraMultiThread/: CMakeLists.txt  package.xml
src/UltraMultiThread/include/UltraMultiThread/: Message.hpp  ObjManager.hpp
src/aimer/: CMakeLists.txt  README.md  main.cpp  package.xml
src/aimer/auto_aim/: CMakeLists.txt  README.md
src/aimer/auto_aim/base/: defs.hpp
src/aimer/auto_aim/detector_opencv/: CMakeLists.txt  TRTModule.cpp  TRTModule.hpp  entry.cpp
src/aimer/auto_aim/predictor/: CMakeLists.txt  entry.cpp
src/aimer/auto_aim/predictor/aim/: aim_corrector.cpp  aim_corrector.hpp  do_reproj.hpp
src/aimer/auto_aim/predictor/enemy/: armor_identifier.cpp  armor_identifier.hpp  balance.cpp  balance.hpp  enemy_state.cpp  enemy_state.hpp
src/aimer/auto_aim/predictor/enemy_predictor/: enemy_predictor.cpp  enemy_predictor.hpp
src/aimer/auto_aim/predictor/motion/: enemy_model.cpp  enemy_model.hpp  motion_model.cpp  motion_model.hpp  top4_model.cpp  top4_model.hpp  top_model.cpp  top_model.hpp
src/aimer/auto_aim/predictor/pnp/: pnp.cpp  pnp.hpp
src/aimer/base/: CMakeLists.txt  armor_defs.hpp
src/aimer/base/debug/: debug.cpp  debug.hpp
src/aimer/base/math/: math.cpp  math.hpp
src/aimer/base/math/filter/: adaptive_ekf.hpp  filter.hpp  kalman.hpp
src/aimer/base/robot/: coord_converter.cpp  coord_converter.hpp
src/aimer/hero_lob/: CMakeLists.txt  hero_defs.hpp
src/aimer/hero_lob/aimer/: CMakeLists.txt  calculator.cpp  calculator.hpp  calculator.py  enemy_aimer.cpp  enemy_aimer.hpp  entry.cpp
src/aimer/hero_lob/detector/: CMakeLists.txt  entry.cpp  traditional_vision.cpp  traditional_vision.hpp
src/aimer/param/: CMakeLists.txt  entry.cpp  parameter.cpp  parameter.hpp
src/aimer_msgs/: CMakeLists.txt  package.xml
src/aimer_msgs/msg/: DetectionResult.msg  RobotCmd.msg  RobotStatus.msg
src/automan_sensors_simple/: CMakeLists.txt  package.xml
src/automan_sensors_simple/assets/: MV-CA016-10UC_00K31937955.mfs  param.yml
src/automan_sensors_simple/include/: hikvision.h  mindvision.hpp  sensors.hpp
src/automan_sensors_simple/launch/: camera_imu.launch
src/automan_sensors_simple/src/: camera_imu_node.cpp  hikvision.cpp  mindvision.cpp  sensors.cpp
src/base/: CMakeLists.txt  package.xml
src/base/debug/: print.cpp
src/base/include/base/debug/: print.hpp
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: common.hpp
src/common/src/: common.cpp
src/core_io/: CMakeLists.txt  package.xml
src/core_io/include/core_io/: robot.hpp  sensors.hpp
src/cv_bridge_4/: CMakeLists.txt  package.xml
src/cv_bridge_4/src/: module.hpp
src/detector/: CMakeLists.txt
src/detector/src/: TRTModule.cpp  TRTModule.hpp  entry.cpp
src/predictor/: CMakeLists.txt  package.xml
src/predictor/src/: entry.cpp
src/predictor/src/aim/: aim_corrector.hpp  detect_bullet.cpp  detect_bullet.hpp  do_reproj.cpp
src/predictor/src/enemy/: armor_identifier.cpp  armor_identifier.hpp  balance.cpp  balance.hpp  enemy_state.cpp  enemy_state.hpp
src/predictor/src/enemy_predictor/: enemy_predictor.hpp
src/predictor/src/motion/: enemy_model.cpp  enemy_model.hpp  motion_model.cpp  top4_model.hpp  top_model.cpp
src/robot_msgs/: CMakeLists.txt
src/robot_msgs/msg/sensors/: AutoAimSensorsMsg.msg  AutoAimSensorsParam.msg
