<?xml version="1.0"?>
<package format="2">
  <name>aimer</name>
  <version>0.0.0</version>
  <description>The aimer package</description>

  <maintainer email="sjtu@todo.todo">sjtu</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aimer_msgs</build_depend>
  <build_depend>UltraMultiThread</build_depend>
  <build_depend>base</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>aimer_msgs</build_export_depend>
  <build_export_depend>UltraMultiThread</build_export_depend>
  <build_export_depend>base</build_export_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aimer_msgs</exec_depend>
  <exec_depend>UltraMultiThread</exec_depend>
  <exec_depend>base</exec_depend>

  <export>
  </export>
</package>
